[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tess_transit_finder"
version = "0.1.0"
authors = [
  { name="Gemini", email="gemini@google.com" },
]
description = "A Python CLI to find exoplanet transits in TESS light curves."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lightkurve",
    "astropy",
    "numpy",
    "matplotlib",
    "pandas",
]

[project.scripts]
tess-transit-finder = "tess_transit_finder.cli:main"
